crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_f_t_string_concat_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(
                6,
            ),
            range: 0..22,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(
                        5,
                    ),
                    range: 0..22,
                    value: TStringValue {
                        inner: Concatenated(
                            [
                                FString(
                                    FString {
                                        range: 0..9,
                                        node_index: NodeIndex(
                                            1,
                                        ),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 2..8,
                                                    node_index: NodeIndex(
                                                        0,
                                                    ),
                                                    value: "Hello ",
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                TString(
                                    TString {
                                        range: 10..18,
                                        node_index: NodeIndex(
                                            3,
                                        ),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 12..17,
                                                    node_index: NodeIndex(
                                                        2,
                                                    ),
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                        flags: TStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 19..22,
                                        node_index: NodeIndex(
                                            4,
                                        ),
                                        value: "!",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
