crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..18,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    value: FStringValue {
                        inner: Single(
                            FString {
                                range: 0..18,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..5,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 3..4,
                                                    id: Name("a"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 5..10,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 7..8,
                                                    id: Name("b"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                    Literal(
                                        InterpolatedStringLiteralElement {
                                            range: 10..17,
                                            node_index: NodeIndex(None),
                                            value: "{foo}",
                                        },
                                    ),
                                ],
                                flags: FStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
